PPXDCS-43 Implement agent registering
